--- a/frontend/vue-app/src/assets/base.css
+++ b/frontend/vue-app/src/assets/base.css
@@ -36,19 +36,21 @@
   --section-gap: 160px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: var(--vt-c-black);
-    --color-background-soft: var(--vt-c-black-soft);
-    --color-background-mute: var(--vt-c-black-mute);
+/* Revisit Dark Mode in the Future */
 
-    --color-border: var(--vt-c-divider-dark-2);
-    --color-border-hover: var(--vt-c-divider-dark-1);
+/*@media (prefers-color-scheme: dark) {*/
+/*  :root {*/
+/*    --color-background: var(--vt-c-black);*/
+/*    --color-background-soft: var(--vt-c-black-soft);*/
+/*    --color-background-mute: var(--vt-c-black-mute);*/
 
-    --color-heading: var(--vt-c-text-dark-1);
-    --color-text: var(--vt-c-text-dark-2);
-  }
-}
+/*    --color-border: var(--vt-c-divider-dark-2);*/
+/*    --color-border-hover: var(--vt-c-divider-dark-1);*/
+
+/*    --color-heading: var(--vt-c-text-dark-1);*/
+/*    --color-text: var(--vt-c-text-dark-2);*/
+/*  }*/
+/*}*/
 
 *,
 *::before,
@@ -83,4 +85,106 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+/* MY RULES*/
+:root {
+  --dark: #1f2b33;
+  --primary: #294d66;
+  --secondary: #1f6699;
+  --tertiary: #0077cc;
+  --gray: #929292;
+  --white: #ffffff;
+
+  --breakpoint: 768px;
+}
+
+/* Reset styles */
+body,
+h1,
+h2,
+p,
+ul,
+ol,
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd,
+dt {
+  margin: 0;
+  padding: 0;
+}
+
+/*Globally use border-box for sizing*/
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+/* Body styles */
+body {
+  /*font-family: 'Roboto Slab', serif;*/
+  font-family: 'Inter', serif;
+  font-size: 16px;
+  line-height: 1.6;
+  color: var(--dark);
+  background-color: #fff;
+  margin: 0 1rem;
+}
+
+/* Typography styles */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+p {
+  margin-bottom: 1rem;
+}
+
+/* Link styles */
+a {
+  text-decoration: none;
+  color: #007bff;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/* Cursor styles */
+button,
+a,
+input[type='submit'] {
+  cursor: pointer;
+}
+
+/* Selection styles */
+::selection {
+  background-color: #007bff;
+  color: #fff;
+}
+
+/* UTILITY CLASSES */
+
+.flex {
+  display: flex;
+}
+
+/* DESKTOP CSS */
+@media (min-width: 768px) {
+  body {
+    margin: 0 4rem;
+  }
 }
